# gitfetch

./: .clang-format  .gitignore  CMakeLists.txt  GitData.hpp  README.md  main.cpp
data/: GitData.hpp
disp/: BaseDisplay.hpp  Display.cpp  Display.h  Display.hpp
disp/unix/: BaseDisplay.cpp  Display.cpp
parse/: Parser.cpp  Parser.hpp
